--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/check": "0.4.1",
     "@astrojs/vercel": "^7.8.2",
     "astro": "^4.16.7",
+    "cookie": "^1.0.1",
     "hotkeypad": "0.1.0",
     "typescript": "5.3.3"
   }
