--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/check": "0.4.1",
+    "@astrojs/netlify": "^5.5.4",
     "@astrojs/vercel": "^7.8.2",
     "astro": "^4.16.7",
     "cookie": "^1.0.1",
